--- a/montis/pom.xml
+++ b/montis/pom.xml
@@ -40,6 +40,20 @@
 			<scope>provided</scope>
 		</dependency>
 
+<!--		db        -->
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.3.6.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.8</version>
+		</dependency>
+
 <!--		<dependency>-->
 <!--			<groupId>org.apache.maven.plugins</groupId>-->
 <!--			<artifactId>maven-compiler-plugin</artifactId>-->
