--- a/montis/pom.xml
+++ b/montis/pom.xml
@@ -66,6 +66,15 @@
 			<version>1.3.1</version>
 		</dependency>
 
+
+<!--		support-->
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.10</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
