--- a/montis/pom.xml
+++ b/montis/pom.xml
@@ -67,6 +67,19 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.10.2</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 <!--		support-->
 
 		<dependency>
@@ -75,6 +88,13 @@
 			<version>1.18.10</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.squareup.okhttp</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>2.7.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
