--- a/montis/pom.xml
+++ b/montis/pom.xml
@@ -80,7 +80,14 @@
 			<version>1.2</version>
 		</dependency>
 
-<!--		support-->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.9</version>
+		</dependency>
+
+
+		<!--		support-->
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
